Ajuste a variables de entorno editables en txt